# mercury-cci

./: .gitignore  CMakeLists.txt
CMake/: FindRDMA.cmake
Testing/: CMakeLists.txt  client_bulk_seg.c  client_rpc.c  client_scale.c  mercury_test.c  mercury_test_config.h.in
Testing/driver/: mercury_test_driver.cxx
Testing/na/: CMakeLists.txt  na_test.c
src/: CMakeLists.txt
src/na/: CMakeLists.txt  na.c  na_config.h.in  na_verbs.cc  na_verbs.h
src/na/CMake/: FindIB_VERBS.cmake  FindRDMA_CM.cmake
